--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "socket.io": "^4.7.2"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "node server.js"
   },
   "eslintConfig": {
     "extends": [
