--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "socket.io": "^4.7.2"
   },
   "scripts": {
+    "build": "npm install",
     "start": "node server.js"
   },
   "eslintConfig": {
